<?xml version="1.0"?>
<package format="2">
  <name>ur_kinematics</name>
  <version>1.2.5</version>
  <description>
     Provides forward and inverse kinematics for Universal Robots designs. Updated for to be pure cmake
  </description>

  <author>Kelsey Hawkins</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn</maintainer>
  <maintainer email="miguel.prada@tecnalia.com">Miguel Prada Sarasola</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/ur_kinematics</url>
  <url type="bugtracker">https://github.com/ros-industrial/universal_robot/issues</url>
  <url type="repository">https://github.com/ros-industrial/universal_robot</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
